[project]
name = "chatbot_1thegioi"
version = "0.1.0"
description = "chatbot_1thegioi using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "requests",
    "beautifulsoup4",
    "python-docx>=1.2.0",
]

[project.scripts]
chatbot_1thegioi = "chatbot_1thegioi.main:run"
run_crew = "chatbot_1thegioi.main:run"
train = "chatbot_1thegioi.main:train"
replay = "chatbot_1thegioi.main:replay"
test = "chatbot_1thegioi.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
